--- a/index.html
+++ b/index.html
@@ -19,6 +19,19 @@
         .curr_bg {
             background-color: yellow;
         }
+        body {
+              margin-bottom: 60px; /* Margin bottom by footer height */
+        }
+        .footer {
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            height: 60px; /* Set the fixed height of the
+                             footer here */
+            line-height: 60px; /* Vertically center
+                                  the text there */
+            background-color: #f5f5f5;
+        }
         </style>
     </head>
     <body>
@@ -63,7 +76,7 @@
                 maxwidth="4"> units/h <br/>
             <br/>
             <div v-if="!empty">
-                <div v-if="warning" class="alert alert-warning">
+                <div v-if="warning" class="alert alert-danger">
                     <strong>Warning!</strong> {{ adjusted_infusion_factor }}
                 </div>
                 <span v-if="!warning">
@@ -71,6 +84,11 @@
                 ({{current_infusion_rate}} units/h X {{adjusted_infusion_factor}}) <br/>
                 </span>
             </div>
+            <div class="alert alert-warning" style="margin-top: 3em">
+            Disclaimer: this calculator is a work-in-progress. Please do not use
+            it to make IV rate adjustments for actual patients.
+            </div>
+
             <!--table border="1">
                 <tr>
                     <td rowspan="2">Current BG</td>
@@ -89,8 +107,15 @@
                 </tr>
             </table-->
         </div>
-
         </main><!-- /.container -->
+
+        <footer class="footer">
+            <div class="container">
+                <span class="text-muted">Jon Pipitone, 2018. 
+                    <a href="https://github.com/pipitone/diabetic-management">github</a>
+                </span>
+            </div>
+        </footer>
     <script>
         var inf = Infinity
 
